gcc/testsuite/gdc.test/compilable/imports/test15150a.d
module imports.test15150a;

enum
{
    x
}
