gcc/testsuite/gdc.test/fail_compilation/imports/imp17602.d
module imports.imp17602;

enum Status { on }
